# Bootstrap

./: README.md  bootstrap.py  pyproject.toml  setup.cfg
docs/: requirements.txt
src/bootstrap/: bootstrap code for confidence intervals of corr func (with data at T=3J).py  bootstrap.py
