[metadata]
name = bootstrap
description = Confidence intervals from bootstrapping resampling
author = JP Bureik
license = GPL-3.0 
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    bootstrap
install_requires =
    boost_histogram>=1
    matplotlib>=3
    numpy>=1
    tqdm>=4
    mcpmeas @ git+https://github.com/HeliumIOGS/MAX.git@stable
    plotsetup @ git+https://github.com/HeliumIOGS/Plot-Setup.git@upsaclay
python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest_cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
bootstrap = py.typed

[flake8]
max-line-length = 79
